--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.25.5",
-    "@strapi/plugin-users-permissions": "4.25.5",
-    "@strapi/plugin-i18n": "4.25.5",
     "@strapi/plugin-cloud": "4.25.5",
+    "@strapi/plugin-i18n": "4.25.5",
+    "@strapi/plugin-users-permissions": "4.25.5",
+    "@strapi/strapi": "4.25.5",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "socket.io": "^4.7.5",
     "styled-components": "5.3.3"
   },
   "author": {
